--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -24,6 +24,7 @@ requirements:
     - pip
     - python
     - setuptools
+    - setuptools_scm
   run:
     - corner
     - {{ pin_compatible('numpy') }}
